# Chess-Engine

./: CMakeLists.txt  README.md
include/: board.h  game.h  piece.h  player.h
src/: board.cpp  main.cpp  piece.cpp
